--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "devDependencies": {
-    "jest": "^28.1.3"
-  },
-  "dependencies": {
-    "@types/inquirer": "^9.0.1"
-  },
+  "name": "employee-tracker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "jest"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^6.5.2"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
